from GWDGjn...no conda env

--- a/examples/data-88e-proj03-exception/Megadata88KursVerteilung/autograder/proj03.ipynb
+++ b/examples/data-88e-proj03-exception/Megadata88KursVerteilung/autograder/proj03.ipynb
@@ -1,14 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "outputs": [],
    "source": [
-    "# ASSIGNMENT CONFIG\n",
-    "files:\n",
-    "    - defaults.csv\n",
-    "tests:\n",
-    "    ok_format: false"
+    "# Initialize Otter\n",
+    "import otter\n",
+    "grader = otter.Notebook(\"proj03.ipynb\")"
    ]
   },
   {
@@ -439,16 +442,10 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# BEGIN QUESTION\n",
-    "name: q0_1"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": false,
+    "editable": false,
     "tags": [
      "ignore"
     ]
@@ -458,18 +455,12 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# BEGIN SOLUTION"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "tags": [
-     "ignore"
+     "ignore",
+     "otter_assign_solution_cell"
     ]
    },
    "outputs": [
@@ -490,48 +481,15 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# END SOLUTION"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# BEGIN TESTS"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
-    "tags": []
+    "deletable": false,
+    "editable": false
    },
    "outputs": [],
    "source": [
-    "def test_q0_1(q0_1):\n",
-    "    assert len(q0_1) in [3, 4]\n",
-    "    assert \"sex\" in q0_1\n",
-    "    assert \"education\" in q0_1\n",
-    "    assert \"marital_status\" in q0_1\n",
-    "\n",
-    "test_q0_1(q0_1) # IGNORE"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# END TESTS"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# END QUESTION"
+    "grader.check(\"q0_1\")"
    ]
   },
   {
@@ -546,32 +504,22 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# BEGIN QUESTION\n",
-    "name: q0_2"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "**Question 0.2:** Use `pd.get_dummies` to get dummies for the variables you listed in `q0_1`."
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# BEGIN SOLUTION"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "tags": []
+    "tags": [
+     "otter_assign_solution_cell"
+    ]
    },
    "outputs": [],
    "source": [
@@ -579,47 +527,15 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# END SOLUTION"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# BEGIN TESTS"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
-    "tags": []
+    "deletable": false,
+    "editable": false
    },
    "outputs": [],
    "source": [
-    "def test_q0_2(defaults):\n",
-    "    assert \"education\" not in defaults.columns\n",
-    "    assert \"marital_status\" not in defaults.columns\n",
-    "    assert \"sex_male\" in defaults.columns\n",
-    "\n",
-    "test_q0_2(defaults) # IGNORE"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# END TESTS"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# END QUESTION"
+    "grader.check(\"q0_2\")"
    ]
   },
   {
@@ -642,16 +558,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# BEGIN QUESTION\n",
-    "name: q1_1"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "**Question 1.1:** Complete the `corr` function below to compute the correlation coefficient of two arrays `x` and `y` based on the formula\n",
     "\n",
@@ -663,17 +574,12 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# BEGIN SOLUTION"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "tags": []
+    "tags": [
+     "otter_assign_solution_cell"
+    ]
    },
    "outputs": [],
    "source": [
@@ -687,69 +593,15 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# END SOLUTION"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# BEGIN TESTS"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
-    "tags": []
+    "deletable": false,
+    "editable": false
    },
    "outputs": [],
    "source": [
-    "def test_q1_1_1(np, corr):\n",
-    "    np.random.seed(1234)\n",
-    "    x2 = np.random.uniform(0, 10, 5)\n",
-    "    y2 = np.random.uniform(0, 10, 5)\n",
-    "    assert np.isclose(corr(x2, y2), 0.6410799722591175)\n",
-    "\n",
-    "test_q1_1_1(np, corr) # IGNORE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "\"\"\" # BEGIN TEST CONFIG\n",
-    "points: 1\n",
-    "hidden: true\n",
-    "\"\"\" # END TEST CONFIG\n",
-    "def test_q1_1_2(np, corr):\n",
-    "    np.random.seed(2345)\n",
-    "    x2 = np.random.uniform(0, 10, 5)\n",
-    "    y2 = np.random.uniform(0, 10, 5)\n",
-    "    assert np.isclose(corr(x2, y2), -0.4008555019904271)\n",
-    "\n",
-    "test_q1_1_2(np, corr) # IGNORE"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# END TESTS"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# END QUESTION"
+    "grader.check(\"q1_1\")"
    ]
   },
   {
@@ -770,16 +622,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# BEGIN QUESTION\n",
-    "name: q1_2"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "**Question 1.2:** Using your `corr` function, fill in the `slope` and `intercept` functions below which compute the values of $\\beta_1$ and $\\beta_0$ for the line of best fit that predicts `y` based on `x`. Your function should use vectorized arithmetic (i.e. no `for` loops).\n",
     "\n",
@@ -787,17 +634,12 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# BEGIN SOLUTION"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "tags": []
+    "tags": [
+     "otter_assign_solution_cell"
+    ]
    },
    "outputs": [],
    "source": [
@@ -811,107 +653,15 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# END SOLUTION"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# BEGIN TESTS"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
-    "tags": []
+    "deletable": false,
+    "editable": false
    },
    "outputs": [],
    "source": [
-    "def test_q1_2_1(np, slope):\n",
-    "    np.random.seed(1234)\n",
-    "    x2 = np.random.uniform(0, 10, 5)\n",
-    "    y2 = np.random.uniform(0, 10, 5)\n",
-    "    assert np.isclose(slope(x2, y2), 0.853965497371089)\n",
-    "\n",
-    "test_q1_2_1(np, slope) # IGNORE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def test_q1_2_2(np, intercept):\n",
-    "    np.random.seed(1234)\n",
-    "    x2 = np.random.uniform(0, 10, 5)\n",
-    "    y2 = np.random.uniform(0, 10, 5)\n",
-    "    assert np.isclose(intercept(x2, y2), 1.5592892975597108)\n",
-    "\n",
-    "test_q1_2_2(np, intercept) # IGNORE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "\"\"\" # BEGIN TEST CONFIG\n",
-    "points: 0.5\n",
-    "hidden: true\n",
-    "\"\"\" # END TEST CONFIG\n",
-    "def test_q1_2_3(np, slope):\n",
-    "    np.random.seed(2345)\n",
-    "    x2 = np.random.uniform(0, 10, 5)\n",
-    "    y2 = np.random.uniform(0, 10, 5)\n",
-    "    assert np.isclose(slope(x2, y2), -0.5183482739336265)\n",
-    "\n",
-    "test_q1_2_3(np, slope) # IGNORE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "\"\"\" # BEGIN TEST CONFIG\n",
-    "points: 0.5\n",
-    "hidden: true\n",
-    "\"\"\" # END TEST CONFIG\n",
-    "def test_q1_2_4(np, intercept):\n",
-    "    np.random.seed(2345)\n",
-    "    x2 = np.random.uniform(0, 10, 5)\n",
-    "    y2 = np.random.uniform(0, 10, 5)\n",
-    "    assert np.isclose(intercept(x2, y2), 7.777051922080558)\n",
-    "\n",
-    "test_q1_2_4(np, intercept) # IGNORE"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# END TESTS"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# END QUESTION"
+    "grader.check(\"q1_2\")"
    ]
   },
   {
@@ -927,6 +677,38 @@
     "### References\n",
     "\n",
     "* Data from https://archive.ics.uci.edu/ml/datasets/default+of+credit+card+clients#"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "source": [
+    "## Submission\n",
+    "\n",
+    "Make sure you have run all cells in your notebook in order before running the cell below, so that all images/graphs appear in the output. The cell below will generate a zip file for you to submit. **Please save before exporting!**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "outputs": [],
+   "source": [
+    "# Save your notebook first, then run this cell to export your submission.\n",
+    "grader.export(run_tests=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " "
    ]
   }
  ],
@@ -951,6 +733,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.10"
+  },
+  "otter": {
+   "OK_FORMAT": false,
+   "tests": {
+    "q0_1": "from otter.test_files import test_case\n\nOK_FORMAT = False\n\nname = \"q0_1\"\npoints = None\n\n@test_case(points=None, hidden=False)\ndef test_q0_1(q0_1):\n    assert len(q0_1) in [3, 4]\n    assert \"sex\" in q0_1\n    assert \"education\" in q0_1\n    assert \"marital_status\" in q0_1\n\n",
+    "q0_2": "from otter.test_files import test_case\n\nOK_FORMAT = False\n\nname = \"q0_2\"\npoints = None\n\n@test_case(points=None, hidden=False)\ndef test_q0_2(defaults):\n    assert \"education\" not in defaults.columns\n    assert \"marital_status\" not in defaults.columns\n    assert \"sex_male\" in defaults.columns\n\n",
+    "q1_1": "from otter.test_files import test_case\n\nOK_FORMAT = False\n\nname = \"q1_1\"\npoints = None\n\n@test_case(points=None, hidden=False)\ndef test_q1_1_1(np, corr):\n    np.random.seed(1234)\n    x2 = np.random.uniform(0, 10, 5)\n    y2 = np.random.uniform(0, 10, 5)\n    assert np.isclose(corr(x2, y2), 0.6410799722591175)\n\n@test_case(points=1, hidden=True)\ndef test_q1_1_2(np, corr):\n    np.random.seed(2345)\n    x2 = np.random.uniform(0, 10, 5)\n    y2 = np.random.uniform(0, 10, 5)\n    assert np.isclose(corr(x2, y2), -0.4008555019904271)\n\n",
+    "q1_2": "from otter.test_files import test_case\n\nOK_FORMAT = False\n\nname = \"q1_2\"\npoints = None\n\n@test_case(points=None, hidden=False)\ndef test_q1_2_1(np, slope):\n    np.random.seed(1234)\n    x2 = np.random.uniform(0, 10, 5)\n    y2 = np.random.uniform(0, 10, 5)\n    assert np.isclose(slope(x2, y2), 0.853965497371089)\n\n@test_case(points=None, hidden=False)\ndef test_q1_2_2(np, intercept):\n    np.random.seed(1234)\n    x2 = np.random.uniform(0, 10, 5)\n    y2 = np.random.uniform(0, 10, 5)\n    assert np.isclose(intercept(x2, y2), 1.5592892975597108)\n\n@test_case(points=0.5, hidden=True)\ndef test_q1_2_3(np, slope):\n    np.random.seed(2345)\n    x2 = np.random.uniform(0, 10, 5)\n    y2 = np.random.uniform(0, 10, 5)\n    assert np.isclose(slope(x2, y2), -0.5183482739336265)\n\n@test_case(points=0.5, hidden=True)\ndef test_q1_2_4(np, intercept):\n    np.random.seed(2345)\n    x2 = np.random.uniform(0, 10, 5)\n    y2 = np.random.uniform(0, 10, 5)\n    assert np.isclose(intercept(x2, y2), 7.777051922080558)\n\n"
+   }
   },
   "varInspector": {
    "cols": {
